2011-02-01  Darin Fisher  <darin@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Avoid #ifdefs in code that constructs a GraphicsContext by
        adding a helper class.
        https://bugs.webkit.org/show_bug.cgi?id=53575

        * WebKit.gyp:
        * src/WebFontImpl.cpp:
        (WebKit::WebFontImpl::drawText):
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::printPage):
        (WebKit::WebFrameImpl::paint):
        * src/WebPopupMenuImpl.cpp:
        (WebKit::WebPopupMenuImpl::paint):
        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbarImpl::paint):
        * src/painting: Added.
        * src/painting/GraphicsContextBuilder.h: Added.
        (WebKit::GraphicsContextBuilder::GraphicsContextBuilder):
        (WebKit::GraphicsContextBuilder::context):

2011-02-02  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        IndexedDB: Implement support for cursor updates
        https://bugs.webkit.org/show_bug.cgi?id=53421

        Mirror the update to the IDBObjectStoreInterface::put() signature in
        the WebKit layer wrappers.

        * public/WebIDBObjectStore.h:
        (WebKit::WebIDBObjectStore::put):
        * src/IDBObjectStoreProxy.cpp:
        (WebCore::IDBObjectStoreProxy::put):
        * src/IDBObjectStoreProxy.h:
        * src/WebIDBObjectStoreImpl.cpp:
        (WebKit::WebIDBObjectStoreImpl::put):
        * src/WebIDBObjectStoreImpl.h:

2011-02-02  Chris Evans  <cevans@chromium.org>

        Reviewed by Adam Barth.

        [Chromium] Propagate the accurate gesture status when calling into FrameLoader
        https://bugs.webkit.org/show_bug.cgi?id=53571

        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::loadFrameRequest): FrameLoader might decide the target is a new window, so make such the UserGestureIndicator is fully accurate before calling into it.

2011-02-01  Kent Tamura  <tkent@chromium.org>

        Reviewed by Tony Chang.
