@@ -1,3 +1,15 @@
+2011-02-02  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Dave Hyatt.
+
+        Remove remaining references to right() and bottom() from Chromium build.
+        https://bugs.webkit.org/show_bug.cgi?id=53613
+
+        * src/DragScrollTimer.cpp:
+        (WebKit::distanceToRect): Replaced right/bottom with maxX/maxY.
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::doPixelReadbackToCanvas): Ditto.
+
 2011-02-01  Darin Fisher  <darin@chromium.org>
 
         Reviewed by Kenneth Russell.
